Switched to using JWT
