# movie-ratings/swagger.json
@@ -1,13 +1,15 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Movie Rating API",
-    "description": "Simple API to rate movies",
-    "version": "1.0.0"
+    "title": "Movie Ratings API",
+    "version": "1.0.0",
+    "description": ""
   },
   "host": "movierating-wakw.onrender.com",
   "basePath": "/",
-  "schemes": "[https]",
+  "schemes": [
+    "https"
+  ],
   "paths": {
     "/login": {
       "get": {
@@ -23,8 +25,8 @@
       "get": {
         "description": "",
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
           }
         }
       }
@@ -112,9 +114,6 @@
           "201": {
             "description": "Created"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -185,9 +184,6 @@
           "204": {
             "description": "No Content"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "Not Found"
           },
@@ -210,9 +206,6 @@
           "204": {
             "description": "No Content"
           },
-          "401": {
-            "description": "Unauthorized"
-          },
           "404": {
             "description": "Not Found"
           },
@@ -222,5 +215,20 @@
         }
       }
     }
-  }
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
+  "description": "Simple API to rate movies",
+  "security": [
+    {
+      "bearerAuth": []
+    }
+  ]
 }
